# graph4py

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: edge.py  graph.py  gui.py  node.py  storage.py
src/algorithms/: astar.py  bfs.py  dfs.py  dijkstra.py
tests/: test_algorithms.py  test_edge.py  test_graph.py  test_gui.py  test_node.py  test_storage.py
