[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "graph4py"
version = "0.1.0"
description = "A Python library for graph operations and visualization"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "pytest",
    "networkx",
    "matplotlib"
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-v"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.mypy]
strict = true

[tool.flake8]
max-line-length = 100
